This is just to motivate myself to improve a little bit every day :)

Best: 32

03-04-2025
Streak: 1
    - Following Tutorial: Add additional database operations

01-04-2025
Streak: 2
    - Following Tutorial: Finish designing TaskScreen
    - Following Tutorial: Add TaskAction sealed class

31-03-2025
Streak: 1
    - Following Tutorial: Design TaskScreen (WIP)
    - Add common-language extension functions for tristate (/nullable) Booleans. (The following overengineering was brought to you by a dream I had. Sad, I know.)

25-03-2025
Streak: 3
    - Following Tutorial-ish: Put mongoDB module in DependencyInjection.kt

24-03-2025
Streak: 2
    - Pull initKoin out of androidMain and into shared App code.
    - Add task to restructure 'repository' usage.

23-03-2025
Streak: 1
    - Following Tutorial: Finish layout of HomeScreen
    - Following Tutorial: Create MongoDB class in data layer
    - Following Tutorial: Create VM for HomeScreen

20-03-2025
Streak: 1
    - Add component directory to presentation - for not-quite-screen level fragments and entities outside the nav graph
    - Reorganise directory structure
    - Following Tutorial: Add drawable resources for tutorial
    - Following Tutorial: Add task view, error screen, loading screen.

17-03-2025
Streak: 2
    - Following Tutorial: Followed tutorial on requests state
    - Following Tutorial: Add basic layout to HomeScreen -> introduce material3 dependency
    - Following Tutorial: Add empty DisplayTasks fun + alert dialogue for deleting task

16-03-2025
Streak: 1
Did:
    - Store WIP state of menu buttons. Want to figure out proper state management first before implementing.
    - Rename function
    - Lazy refactor into presentation-domain-data structure -> moved everything that wasn't presentation into domain layer, as we have no real data yet.
    - Following Tutorial: Temporarily use voyager nav.
    - Following Tutorial: Add ToDoTask to data layer.